# foundryvtt-lichtgeschwindigkeit

./: .gitignore  CHANGELOG.md  README.md  build_release.py  deploy.py  module.json
js/: fog.js  main.js  polygon.js  raycasting.js  scene_builder.js
rust/: Cargo.toml
rust/src/: geometry.rs  lib.rs  profiling_main.rs  ptr_indexed_hash_set.rs  raycasting.rs  serialization.rs  wasm_types.rs
rust/src/raycasting/: js_api.rs  js_api.rs.orig  mod.rs  mod.rs.orig  postprocessing.rs  prepare.rs  raycasting.rs  raycasting.rs.orig  types.rs  util.rs  vision_angle.rs
rust/src/tests/: mod.rs
rust/tests/: 14-overflow_wall_not_overflowing_in_fov.ascii85  15-overflow_wall_both_points_seen.ascii85  15-overflow_wall_bottom_point_seen.ascii85  15-overflow_wall_no_point_seen_wall_close.ascii85  15-overflow_wall_no_point_seen_wall_far.ascii85  15-overflow_wall_top_point_seen.ascii85  17-old_closest_wall_paralell_to_ray_line.ascii85  19-origin_on_wall_endpoint.ascii85  25-limited_vision_angle_overflow_both_visible.ascii85  27-almost_vertical_line_with_negative_incline.ascii85  29-minimally_intersecting_walls.ascii85  30-tiny_vision_angle.ascii85  31-limited_angle_wall_to_the_right_with_end_visible.ascii85  32-limited_angle_wall_to_the_right_with_start_visible.ascii85  4-directional_walls.ascii85  5-t_junction.ascii85  6-zero_length_walls.ascii85  limited_vision_angle.ascii85  limited_vision_angle_over_180_hidden_overflowing_wall.ascii85  limited_vision_angle_overflow_end_hidden.ascii85  limited_vision_angle_overflow_start_hidden.ascii85  zero_width_walls.ascii85
